Fixes "General Information" section of CV in dark mode (#1432)
When the dark mode is default, or if you set the page to dark mode and
then refresh, the content in "General Information" can't be seen.
This PR fixes the problem.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1378,6 +1378,12 @@ ninja-keys::part(ninja-input-wrapper) {
   }
 }
 
+.table-cv-map {
+  background-color: transparent;
+  border: none;
+  color: var(--global-text-color);
+}
+
 // Repositories
 
 @media (min-width: 768px) {
